--- a/src/app/mentees-signup/mentees-signup.component.html
+++ b/src/app/mentees-signup/mentees-signup.component.html
@@ -21,7 +21,7 @@
   
               <div class="form-group mb-4">
                 <label for="">Re-enter Password</label>
-                <input type="password" [(ngModel)]="mentee.confirmPassword" class="form-control" placeholder="Re-enter Password" name="confirmPassword" required>
+                <input type="password" [(ngModel)]="confirmPassword" class="form-control" placeholder="Re-enter Password" name="confirmPassword" required>
               </div>
   
               
