--- a/src/app/mentors-signup/mentors-signup.component.html
+++ b/src/app/mentors-signup/mentors-signup.component.html
@@ -21,7 +21,7 @@
   
               <div class="form-group mb-4">
                 <label for="">Re-enter Password</label>
-                <input type="password" [(ngModel)]="mentor.confirmPassword" class="form-control" placeholder="Re-enter Password" name="confirmPassword" required>
+                <input type="password" [(ngModel)]="confirmPassword" class="form-control" placeholder="Re-enter Password" name="confirmPassword" required>
               </div>
               
               <div class="form-group">
@@ -54,7 +54,7 @@
               </div> -->
           
               <div class="form-group mb-2">
-                  <button type="submit" class="btn btn-secondary btn-block" (click)="signup()" [disabled]="!mentorSignupForm.valid  || user.password !== user.confirmPassword || !captchaResponse" >
+                  <button type="submit" class="btn btn-secondary btn-block" (click)="signup()" [disabled]="!mentorSignupForm.valid  || mentor.password !== confirmPassword" >
                     <span *ngIf="!isLoading; else loading">
                       Sign Up
                     </span>
