--- a/src/app/drills/drills.component.html
+++ b/src/app/drills/drills.component.html
@@ -3,7 +3,11 @@
     <div class="row">
       <div class="col">
         <div>
-            <div style="padding: 2% 0;">Schedule drills!</div>
+            <div style="text-align: center;
+            padding: 2% 0;
+            font-size: 5rem;
+            font-weight: 900;
+            color: #150038;">Schedule drills!</div>
             <iframe src="https://calendar.google.com/calendar/embed?src=brown.edu_sqlmoldrrkvos4al99qqam9l4g%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
