--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -1,7 +1,7 @@
 .mentees-page {
     background-color: #e8e0fc;
     height: 100%;
-    min-height: 450px;
+    min-height: 500px;
     width: 100%;
     overflow: hidden;
 }
@@ -14,6 +14,9 @@
 .mentees-header {
     text-align: center;
     padding: 2% 0;
+    font-size: 5rem;
+    font-weight: 900;
+    color: #150038;
 }
 
 .signup-button {
