--- a/src/app/who-we-are/who-we-are.component.css
+++ b/src/app/who-we-are/who-we-are.component.css
@@ -1,7 +1,7 @@
 .who-we-are-page {
     background-color: #e8e0fc;
     height: 100%;
-    min-height: 450px;
+    min-height: 500px;
     width: 100%;
 }
 
@@ -13,11 +13,16 @@
 .who-we-are-header {
     text-align: center;
     padding: 2% 0;
+    font-size: 5rem;
+    font-weight: 900;
+    color: #150038;
 }
 
 p {
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding: 0 5%;
+    line-height: 2.5rem;
+    text-align: center;
 }
 
 h5 {
