--- a/src/app/who-we-are/who-we-are.component.html
+++ b/src/app/who-we-are/who-we-are.component.html
@@ -1,20 +1,27 @@
 <section class="who-we-are-page">
     <div class="container">
-      <div class="row">
-        <div class="col">
+      <div class="row" style="min-height:450px;">
+        <div class="col-lg-10 mr-auto ml-auto">
           <div class="who-we-are-header">
             who we are
             <hr style="height: 3px; width: 25%; background-color: #3c3059">
             <hr style="height: 2px; width: 15%; background-color: #84b7b1">
           </div>
-          <p>
-              W.in Debate is a free mentoring service that provides mentees with the opportunity to refine their debating 
-              skills in a space where they feel both comfortable and safe, while building long-lasting relationships with 
-              positive role models. Founded on the principle of women supporting women, our program seeks to create a support 
-              system for younger women involved in Lincoln-Douglas Debate, a male-dominated activity. We believe that competitive 
-              success shouldn’t come at the expense of a woman’s safety and wellbeing, and hope to foster an environment 
-              where both are possible. 
-          </p>
+            <p>
+                W.in Debate is a free mentoring service that provides mentees with the opportunity to refine their debating 
+                skills in a space where they feel both comfortable and safe, while building long-lasting relationships with 
+                positive role models. 
+                <!-- <br>
+                <br>
+                Founded on the principle of women supporting women, our program seeks to create a support 
+                system for younger women involved in Lincoln-Douglas Debate, a male-dominated activity. We believe that competitive 
+                success shouldn’t come at the expense of a woman’s safety and wellbeing, and hope to foster an environment 
+                where both are possible.  -->
+            </p>
+          </div>
+        </div>
+      <div class="row">
+        <div class="col-lg-10 mr-auto ml-auto">
           <div class="who-we-are-header">
             organizers
             <hr style="height: 3px; width: 25%; background-color: #3c3059">
