change background color

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .home-page {
-    background-color: #e8e0fc;
+    background-color: #1e0626;
     height: 500px;
     width: 100%;
     /* border-bottom: 1px solid #beb6db; */
