--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div style="color: #150038; margin-top: 2rem;">
+          <div style="color: white; margin-top: 2rem;">
               <div>w.in</div>
               <div>debate</div>
           </div>
