--- a/src/app/mentees-signup/mentees-signup.component.html
+++ b/src/app/mentees-signup/mentees-signup.component.html
@@ -48,7 +48,7 @@
   
               <div class="form-group">
                 <label for="">Preferences</label>
-                <input type="password" [(ngModel)]="mentee.preferences" class="form-control" placeholder="Let us know if you have any specific needs!" name="preferences" required>
+                <input type="text" [(ngModel)]="mentee.preferences" class="form-control" placeholder="Let us know if you have any specific needs!" name="preferences" required>
               </div>
           
               <!-- <div class="form-group mb-4">
