--- a/src/app/top-nav/top-nav.component.css
+++ b/src/app/top-nav/top-nav.component.css
@@ -1,5 +1,6 @@
 .navbar {
-    background-color: #262626;
+    background-color:#e8e0fc;
+
     width: 100%;
     position: fixed;
     top: 0;
@@ -25,5 +26,5 @@
 }
 
 ul>li>a{
-    color: white;
+    color: #84b7b1;
 }
