--- a/src/app/who-we-are/who-we-are.component.css
+++ b/src/app/who-we-are/who-we-are.component.css
@@ -1,5 +1,5 @@
 .who-we-are-page {
-    background-color: #e8e0fc;
+    background-color: #1e0626;
     height: 100%;
     min-height: 500px;
     width: 100%;
@@ -15,7 +15,7 @@
     padding: 2% 0;
     font-size: 5rem;
     font-weight: 900;
-    color: #150038;
+    color: white;
 }
 
 p {
@@ -23,6 +23,7 @@ p {
     padding: 0 5%;
     line-height: 2.5rem;
     text-align: center;
+    color:#84b7b1;
 }
 
 h5 {
