--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -1,5 +1,5 @@
 .mentees-page {
-    background-color: #e8e0fc;
+    background-color: #1e0626;
     height: 100%;
     min-height: 500px;
     width: 100%;
