--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -21,6 +21,9 @@
           <a class="nav-link" routerLink="mentors">MENTORS</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" routerLink="resources">RESOURCES</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" routerLink="contact">CONTACT</a>
         </li>
         <li>
