--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .home-page {
-    background-color: #1e0626;
-    height: 500px;
+    background-color: #d9d0ef;
+    height: 450px;
     width: 100%;
     /* border-bottom: 1px solid #beb6db; */
 }
