--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -1,5 +1,5 @@
 .mentees-page {
-    background-color: #1e0626;
+    background-color: #e8e0fc;
     height: 100%;
     min-height: 500px;
     width: 100%;
@@ -16,7 +16,6 @@
     padding: 2% 0;
     font-size: 5rem;
     font-weight: 900;
-    color: #150038;
 }
 
 .signup-button {
