--- a/src/app/mentors/mentors.component.css
+++ b/src/app/mentors/mentors.component.css
@@ -1,5 +1,5 @@
 .mentors-page {
-    background-color: #1e0626;
+    background-color: #e8e0fc;
     height: 100%;
     min-height: 500px;
     width: 100%;
@@ -15,7 +15,6 @@
     padding: 2% 0;
     font-size: 5rem;
     font-weight: 900;
-    color: #150038;
 }
 
 .signup-button {
@@ -28,3 +27,4 @@
 .signup-button:hover {
     cursor: pointer;
 }
+
