--- a/src/app/contact/contact.component.css
+++ b/src/app/contact/contact.component.css
@@ -1,5 +1,5 @@
 .contact-page {
-    background-color: #1e0626;
+    background-color: #e8e0fc;
     height: 100%;
     width: 100%;
 }
@@ -14,7 +14,6 @@
     padding: 2% 0;
     font-size: 5rem;
     font-weight: 900;
-    color: #150038;
 }
 
 p {
