--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="col">
           <div style=" margin-top: 2rem;">
             TESTING
-              <div>w.in</div>
+              <div>w.in HIIII</div>
               <div>debate</div>
           </div>
           <div class="row" style="justify-content: center">
