--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,8 +3,7 @@
       <div class="row">
         <div class="col">
           <div style=" margin-top: 2rem;">
-            TESTING
-              <div>w.in HIIII</div>
+              <div>w.in</div>
               <div>debate</div>
           </div>
           <div class="row" style="justify-content: center">
