--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -24,3 +24,37 @@
 .home-page-button:hover {
     cursor: pointer;
 }
+
+.who-we-are-page {
+    background-color: #e8e0fc;
+    height: 100%;
+    min-height: 450px;
+    width: 100%;
+}
+
+.col {
+    padding: 10px;
+    font-size: 2rem;
+}
+
+.who-we-are-header {
+    text-align: center;
+    padding: 2% 0;
+}
+
+p {
+    font-size: 1rem;
+    padding: 0 5%;
+}
+
+h5 {
+    padding: 0 5%;
+    color:  #7c4eaa;
+    font-weight: 600;
+}
+
+.claire {
+    width: 250px;
+    height: 250px;
+    margin-left: 5%;
+}
