--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -32,10 +32,10 @@
     width: 100%;
 }
 
-.col {
+/* .col {
     padding: 10px;
     font-size: 2rem;
-}
+} */
 
 .who-we-are-header {
     text-align: center;
