tried to fix navbar but didn't work

--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -11,7 +11,7 @@
     <div class="container-fluid" style="width: 100%;">
       <ul class="navbar-nav" style="justify-content: flex-end">
           
-        <li class="nav-item active" (click)="onClick()">
+        <li class="nav-item" (click)="onClick()">
           <a class="nav-link" routerLink="who-we-are">WHO WE ARE</a>
         </li>
         <li class="nav-item">
@@ -37,7 +37,7 @@
         <div class="container-fluid" style="width: 100%;">
           <ul class="navbar-nav" style="justify-content: flex-end">
               
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" routerLink="drills">SIGNUP FOR DRILLS</a>
             </li>
             <li class="nav-item">
