--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,10 +6,10 @@
               <div>w.in</div>
               <div>debate</div>
           </div>
-          <div class="row" style="justify-content: center">
+          <!-- <div class="row" style="justify-content: center">
               <button class="home-page-button" (click)="openChoice()">Sign Up</button>
               <button class="home-page-button" (click)="openLogin()">Login</button>
-          </div>
+          </div> -->
           
         </div>
       </div>
