--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
 <section class="home-page">
     <div class="container">
-      <div class="row">
+      <div class="row">  
         <div class="col">
-          <div style=" margin-top: 2rem;">
+          <div class= "win-debate-header" style=" margin-top: 2rem;">
               <div>w.in</div>
               <div>debate</div>
           </div>
@@ -12,11 +12,11 @@
           </div> -->
           
         </div>
-      </div>
+       </div> 
     </div>
-  </section>
+ <!-- </section> -->
 
-  <section class="who-we-are-page">
+ <!-- <section class="who-we-are-page"> -->
       <div class="container">
         <div class="row">
           <div class="col">
@@ -41,33 +41,30 @@
             
     
           <div>
-            <h5>Lindsey Perlman: Editor-in-Chief</h5>
-              <p style="float: left;"><img class= "claire" src="../../assets/images/lindsey-perlman.jpg" ></p>
+            <h5 style = "float:left;" > Lindsey Perlman: Editor-in-Chief</h5>
+            <hr style="height:20pt; visibility:hidden;" />
+            <p style="float: left;"><img class= "claire" src="../../assets/images/lindsey-perlman.jpg" ></p>
               <p>
                   Lindsey is a rising senior from New York. Her experiences with sexism in the debate activity motivated
                   her to create W.in debate in the hopes that it would prevent the same discrimination from happening to younger 
-                  women. Lindsey is grateful to have had older female role models throughout her time in the activity to guide 
+                  women. Lindsey is grateful to have had older women role models throughout her time in the activity to guide 
                   and encourage her, and she hopes that W.in debate will provide other young women with a similar support system. 
                   Lindsey is excited to play a role in creating an empowering space for women through the W.in debate platform!
               </p>
           </div>
-          <br>
-          <br>
+          <hr style="height:50pt; visibility:hidden;" />
           <div>
-              <h5>Claire Liu: Web Developer</h5>
+              <h5 style="float:left;"> Claire Liu: Web Developer</h5>
+              <hr style="height:20pt; visibility:hidden;" />
                 <p style="float: left;"><img class= "claire" src="../../assets/images/claire-liu.jpg" ></p>
                 <p>
-                    Lindsey is a rising senior from New York. Her experiences with sexism in the debate activity motivated
-                    her to create W.in debate in the hopes that it would prevent the same discrimination from happening to younger 
-                    women. Lindsey is grateful to have had older female role models throughout her time in the activity to guide 
-                    and encourage her, and she hopes that W.in debate will provide other young women with a similar support system. 
-                    Lindsey is excited to play a role in creating an empowering space for women through the W.in debate platform!
-                </p>
+                    Claire is a rising senior at Stuyvesant High School in New York City. After three years of debate, she recognized the value in forming relations with other women in the community. Compounded with the pervasiveness of sexism she experienced at debate camp, she decided to help in developing W.in debate. Throughout her career, Claire has been appreciative of the strength of women leadership on the Stuyvesant LD team. She hopes that W.in debate will provide them with the same resources and connections that she’s been able to have.                   
+                  </p>
               </div>
-              <br>
-              <br>
+              <hr style="height:50pt; visibility:hidden;" />
           <div>
-              <h5>Julia Wu: Communications </h5>
+              <h5 style="float:left;"> Julia Wu: Communications </h5>
+              <hr style="height:20pt; visibility:hidden;" />
                 <p style="float: left;"><img class= "claire" src="../../assets/images/julia-wu.jpg" ></p>
                 <p>
                     Lindsey is a rising senior from New York. Her experiences with sexism in the debate activity motivated
@@ -77,8 +74,7 @@
                     Lindsey is excited to play a role in creating an empowering space for women through the W.in debate platform!
                 </p>
             </div>
-            <br>
-            <br>
+            <hr style="height:50pt; visibility:hidden;" />
     
               <h5>Amy Pu</h5>
               <p>photo</p>
@@ -87,5 +83,5 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> 
     
