--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,10 +1,12 @@
 .home-page {
     background-color: #e8e0fc;
-    height: 500px;
+    height: 2000px;
     width: 100%;
     /* border-bottom: 1px solid #beb6db; */
 }
-
+.win-debate-header{
+    background-color: lightblue;
+}
 .col {
     /* padding: 10px; */
     font-size: 6rem;
@@ -40,6 +42,7 @@
 .who-we-are-header {
     text-align: center;
     padding: 2% 0;
+    font-size: 3rem;
 }
 
 p {
@@ -54,7 +57,7 @@ h5 {
 }
 
 .claire {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     margin-left: 5%;
 }
