--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
 body {
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Didact Gothic', sans-serif;
 }
