--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,12 +1,11 @@
 .home-page {
-    background-color: #e8e0fc;
-    height: 2000px;
+    background-image: url("../../assets/images/NSD-2nd-Lab.jpg");
+    height: 853px;
     width: 100%;
+    background-size: 100% 100%;
     /* border-bottom: 1px solid #beb6db; */
 }
-.win-debate-header{
-    background-color: lightblue;
-}
+
 .col {
     /* padding: 10px; */
     font-size: 6rem;
@@ -48,6 +47,7 @@
 p {
     font-size: 1rem;
     padding: 0 5%;
+
 }
 
 h5 {
