--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,21 +2,17 @@
     <div class="container">
       <div class="row">  
         <div class="col">
-          <div class= "win-debate-header" style=" margin-top: 2rem;">
+          <div class= "win-debate-header" style="color: white; margin-top: 2rem;">
               <div>w.in</div>
               <div>debate</div>
           </div>
-          <!-- <div class="row" style="justify-content: center">
-              <button class="home-page-button" (click)="openChoice()">Sign Up</button>
-              <button class="home-page-button" (click)="openLogin()">Login</button>
-          </div> -->
           
         </div>
        </div> 
     </div>
- <!-- </section> -->
+ </section>
 
- <!-- <section class="who-we-are-page"> -->
+ <section class="who-we-are-page">
       <div class="container">
         <div class="row">
           <div class="col">
