--- a/src/app/mentees/mentees.component.html
+++ b/src/app/mentees/mentees.component.html
@@ -2,9 +2,11 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="mentees-header">
-            mentees
-          </div>
+            <div class="mentees-header">
+mentees
+                <hr style="height: 3px; width: 25%; background-color: #3c3059">
+                <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+              </div>
           <div style="text-align: center">
             <button class="signup-button" (click)="openSignup()">Sign up to be a mentee!</button>
           </div>
