--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,9 +2,11 @@
   <div class="container">
     <div class="row">
       <div class="col">
-        <div class="contact-header">
-          contact
-        </div>
+          <div class="contact-header">
+              contact
+                <hr style="height: 3px; width: 25%; background-color: #3c3059">
+                <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+              </div>
         <p>
           Don't hesitate to reach out with any questions, comments, or concerns! We'd be more than happy to help.
           <br>
