--- a/src/app/mentors/mentors.component.html
+++ b/src/app/mentors/mentors.component.html
@@ -2,9 +2,50 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          <div class="mentors-header">
-            mentors
-          </div>
+            <div class="mentors-header">
+              mentors
+                <hr style="height: 3px; width: 25%; background-color: #3c3059">
+                <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+              </div>
+
+
+              <div class="row" style="margin-left:0px; margin-right:0px;">
+                  <div class="col-md-2 col-md-offset-1">
+                    <div class="circularmain pic img-circle">                              
+                      
+                        <img src="../../assets/images/simran-gandhi.jpg" class="img-responsive img-circle fig">                   
+
+
+
+
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <div class="circularmain pic img-circle">
+                        <img src="../../assets/images/madi-crowley .jpg" class="img-responsive img-circle fig">                   
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <div class="circularmain pic img-circle">
+                        <img src="../../assets/images/sanjana-bhatnagar.jpg" class="img-responsive img-circle fig">                
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <div class="circularmain pic img-circle">
+                        <img src="../../assets/images/isabella-nadel.jpg" class="img-responsive img-circle fig">               
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                    <div class="circularmain pic img-circle">
+                        <img src="../../assets/images/avery-fortier.png" class="img-responsive img-circle fig">               
+                    </div>
+                  </div>
+                  <div class="col-md-2">
+                      <div class="circularmain pic img-circle">
+                          <img src="../../assets/images/sally-ho.jpg" class="img-responsive img-circle fig">               
+                      </div>
+                    </div>
+                </div>
           <div style="text-align: center">
             <button class="signup-button" (click)="openSignup()">Become a mentor!</button>
           </div>
