--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -59,15 +59,12 @@
               </div>
               <hr style="height:50pt; visibility:hidden;" />
           <div>
-              <h5 style="float:left;"> Julia Wu: Communications </h5>
+              <h5 style="float:left;">  Julia Wu: Program Development  </h5>
               <hr style="height:20pt; visibility:hidden;" />
                 <p style="float: left;"><img class= "claire" src="../../assets/images/julia-wu.jpg" ></p>
                 <p>
-                    Lindsey is a rising senior from New York. Her experiences with sexism in the debate activity motivated
-                    her to create W.in debate in the hopes that it would prevent the same discrimination from happening to younger 
-                    women. Lindsey is grateful to have had older female role models throughout her time in the activity to guide 
-                    and encourage her, and she hopes that W.in debate will provide other young women with a similar support system. 
-                    Lindsey is excited to play a role in creating an empowering space for women through the W.in debate platform!
+                   
+Julia Wu is a senior at Lake Highland Preparatory School in Florida. After being in debate for several years, she has found that having positive older role models and being surrounded by other girls has been one of the greatest support systems. She started W.in Debate because she believes that womxn debaters on every team (regardless of size, resources, gender disparities) should have the ability to form close relationships with other womxn in the activity. She is looking forward to working with the mentees at W.in Debate to help them have a more fulfilling debate experience! She enjoys reading phil, Ks, theory, and topicality including authors like Rosi Bradotti.
                 </p>
             </div>
             <hr style="height:50pt; visibility:hidden;" />
