--- a/src/app/drills/drills.component.html
+++ b/src/app/drills/drills.component.html
@@ -7,7 +7,14 @@
             padding: 2% 0;
             font-size: 5rem;
             font-weight: 900;
-            color: #150038;">Schedule drills!</div>
+            color: #150038;">Schedule drills!
+            <hr style="height: 3px; width: 25%; background-color: #3c3059">
+            <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+          </div>
+           
+
+
+
             <iframe src="https://calendar.google.com/calendar/embed?src=brown.edu_sqlmoldrrkvos4al99qqam9l4g%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </div>
       </div>
