--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -31,8 +31,19 @@ h5 {
     color:  #7c4eaa;
     font-weight: 600;
 }
+/*
 .sylvia {
     width: 180px;
     height: 260px;  
 }
+*/
+.circularmain img {
+    margin: 10px;
+    border: 6px solid #a1c3d1;
+    box-shadow: inset 0 0 0 16px rgba(255, 255, 255, 0.6), 0 1px 2px rgba(0, 0, 0, 0.1);
+    width: 260px;
+    height: 260px;
+ }
 
+ 
+ 
