--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -3,10 +3,12 @@
     <div class="row">
       <div class="col">
         <div class="resources-header">
-          card files
+resources
           <hr style="height: 3px; width: 25%; background-color: #3c3059">
           <hr style="height: 2px; width: 15%; background-color: #84b7b1">
         </div>
+        <!--
+
         
         <div>
             <a href="google.com">
@@ -14,9 +16,70 @@
           <p></p>
           <p>Sylvia Wynter File</p>
         </a>
-          </div>
       
       </div>
-    </div>
+       
+       <div class="img">
+          <br>
+
+          <img src="../../assets/images/sylviawynter.jpg" > 
+          <div>caption text</div>
+          <img src="../../assets/images/sylviawynter.jpg">
+          <img src="../../assets/images/sylviawynter.jpg">
+        
+          <br>
+      </div>
+    -->
+
+
+
+    <div class="row" style="margin-left:100px; margin-right:100px;">
+        <div class="col-md-2 col-md-offset-1">
+          <div class="circularmain pic img-circle">                              
+            
+              <img src="../../assets/images/simran-gandhi.jpg" class="img-responsive img-circle fig">                   
+
+
+
+
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="circularmain pic img-circle">
+              <img src="../../assets/images/madi-crowley .jpg" class="img-responsive img-circle fig">                   
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="circularmain pic img-circle">
+              <img src="../../assets/images/sanjana-bhatnagar.jpg" class="img-responsive img-circle fig">                
+          </div>
+        </div>
+        <div class="col-md-2">
+          <div class="circularmain pic img-circle">
+              <img src="../../assets/images/isabella-nadel.jpg" class="img-responsive img-circle fig">               
+          </div>
+        </div>
+        </div>
+        <br>
+        <div class="row" style="margin-left:0px; margin-right:0px;">
+        <div class="col-md-2">
+          <div class="circularmain pic img-circle">
+              <img src="../../assets/images/avery-fortier.png" class="img-responsive img-circle fig">               
+          </div>
+        </div>
+        <div class="col-md-2">
+            <div class="circularmain pic img-circle">
+                <img src="../../assets/images/sally-ho.jpg" class="img-responsive img-circle fig">               
+            </div>
+          </div>
+      </div>
+
+
+
+        
+
   </div>
+  </div>
+  </div>
+  
 </section>
