--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -35,6 +35,8 @@
     height: 100%;
     min-height: 450px;
     width: 100%;
+    padding-left: 13%;
+    padding-right: 13%;
 }
 
 /* .col {
@@ -50,6 +52,7 @@
 
 p {
     font-size: 1rem;
+    line-height: 1.8rem;
     padding: 0 5%;
 
 }
