--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,6 +42,15 @@
                     Login
                   </span>
                   <ng-template #loading>
+
+                    <!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<!-- Add font awesome icons to buttons (note that the fa-spin class rotates the icon) -->
+
+<button class="buttonload">
+  <i class="fa fa-circle-o-notch fa-spin"></i>Loading
+</button>
                     <!-- <app-loading-spinner [height]="24"></app-loading-spinner> -->
                   </ng-template>
                 </button>
@@ -64,6 +73,11 @@
                     </span>
                     <ng-template #loading>
                       <!-- <app-loading-spinner [height]="24"></app-loading-spinner> -->
+
+
+
+
+
                     </ng-template>
                   </button>
               </div>
