--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -17,6 +17,13 @@
     font-size: 5rem;
     font-weight: 900;
 }
+.list {
+    font-size: 1rem;
+}
+
+.title{
+    font-size: 1.5rem;
+}
 
 .signup-button {
     border-radius: 20px;
