add stuff before claire changes frontend shit

--- a/src/app/mentees/mentees.component.html
+++ b/src/app/mentees/mentees.component.html
@@ -3,50 +3,48 @@
       <div class="row">
         <div class="col">
             <div class="mentees-header">
-mentees
-                <hr style="height: 3px; width: 25%; background-color: #3c3059">
-                <hr style="height: 2px; width: 15%; background-color: #84b7b1">
-              </div>
-              <h1 class="title">
+              mentees
+              <hr style="height: 3px; width: 25%; background-color: #3c3059">
+              <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+            </div>
+            <h1 class="title">
               As a mentee, you will:
             </h1>
-
-<ul class = "list" > 
-  <li> Improve your debating skills by working with our mentors on speeches, cases, and content. </li>
-
-<li> 
-Access all of W.in Debate’s resources such as card files and cases. </li>
-<li> 
-Be part of a network of intelligent and accepting women that will support you, both inside and outside of debate.</li>
-</ul>
-<div class="mentees-header">
-    FAQ
-                    <hr style="height: 3px; width: 25%; background-color: #3c3059">
-                    <hr style="height: 2px; width: 15%; background-color: #84b7b1">
-                  </div>
-                  <h1 class="title">
-                  How does the program work?
-                  </h1>
-                  <ul class= "list" style="list-style-type:none">
-                      <li>                  After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record for success in debate, and were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
-                        </li>
-                    </ul>
-                    <h1 class="title">
-                        How much does it cost?
-                        </h1>
-                        <ul class= "list" style="list-style-type:none">
-                            <li>   Nothing!               
-                              </li>
-                          </ul>
-                  
-                          <h1 class="title">
-                              How do I schedule meetings with my mentor?                              </h1>
-                              <h1 class="title">
-                                  <ul class= "list" style="list-style-type:none">
-                                      <li>                     Each week, our mentors will input the times that they are available to work with mentees on our shared Google Calendar. Mentees can access this Google Calendar from the W.in Debate website. From there, mentees will contact the mentors they wish to work with to schedule video-chat sessions.
-       
-                                        </li>
-                                    </ul>
+            <ul class="list" > 
+              <li> Improve your debating skills by working with our mentors on speeches, cases, and content. </li>
+              <li> 
+                Access all of W.in Debate’s resources such as card files and cases. </li>
+              <li> 
+                Be part of a network of intelligent and accepting women that will support you, both inside and outside of debate.</li>
+            </ul>
+            <div class="mentees-header">
+              FAQ
+              <hr style="height: 3px; width: 25%; background-color: #3c3059">
+              <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+            </div>
+            <h1 class="title">
+            How does the program work?
+            </h1>
+            <ul class= "list" style="list-style-type:none">
+              <li>
+                After prospective mentees fill out our Google Application Form, W.in Debate will match them with mentors in their region that have similar debating styles and interests. All of our mentors have had a track record for success in debate, and were chosen because of their outstanding character and commitment to helping others. Mentees will then receive an email with their assigned mentor and their contact information when the matching process is complete. From there, mentees will be able to schedule video-chat sessions with their mentors to work on any debate skill of their choosing. 
+              </li>
+            </ul>
+            <h1 class="title">
+              How much does it cost?
+            </h1>
+            <ul class= "list" style="list-style-type:none">
+              <li>Nothing!               
+              </li>
+            </ul>
+            <h1 class="title">
+              How do I schedule meetings with my mentor?
+            </h1>
+            <h1 class="title">
+              <ul class= "list" style="list-style-type:none">
+                <li>Each week, our mentors will input the times that they are available to work with mentees on our shared Google Calendar. Mentees can access this Google Calendar from the W.in Debate website. From there, mentees will contact the mentors they wish to work with to schedule video-chat sessions.
+                </li>
+              a</ul>
                                   </h1>
                                   <h1 class="title">
                                       Can I join the program if I am not a woman?
