--- a/src/app/mentees/mentees.component.css
+++ b/src/app/mentees/mentees.component.css
@@ -19,10 +19,13 @@
 }
 .list {
     font-size: 1rem;
+    padding-left: auto;
+    padding-right: auto;
 }
 
 .title{
     font-size: 1.5rem;
+    text-align: center;
 }
 
 .signup-button {
