--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -6,6 +6,7 @@
               <div>Name: {{this.menteesService.mentee.firstName}} {{this.menteesService.mentee.lastName}}</div>
               <div>Age: {{this.menteesService.mentee.age}} </div>
               <div>School: {{this.menteesService.mentee.school}} </div>
+              <div>Mentor: {{this.menteesService.mentee.mentor}}</div>
           </div>
 
           <div *ngIf="this.loginService.mentorLoggedIn">
