--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,6 @@
 .home-page {
-    background-image: url("../../assets/images/NSD-2nd-Lab.jpg");
-    height: 580px;
+    background-image: url("../../assets/images/cover-pic.jpeg");
+    height: 480px;
     width: 100%;
     background-size: 100% 100%;
     background-attachment: fixed;
