--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,5 +1,5 @@
 .home-page {
-    background-image: url("../../assets/images/cover-pic.jpeg");
+    background-image: url("../../assets/images/cover-pic.jpg");
     height: 480px;
     width: 100%;
     background-size: 100% 100%;
