--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -9,9 +9,9 @@
 
 
     <div class="modal-body">
-        <!-- <div class="col-xs-12">
+        <div class="col-xs-12">
           <app-alerts [alerts]="alerts"></app-alerts>
-        </div> -->
+        </div>
 
       <div class="tab-content">
 
