--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -3,15 +3,20 @@
     <div class="row">
       <div class="col">
           <div class="contact-header">
-              contact
-                <hr style="height: 3px; width: 25%; background-color: #3c3059">
-                <hr style="height: 2px; width: 15%; background-color: #84b7b1">
-              </div>
-        <p>
-          Don't hesitate to reach out with any questions, comments, or concerns! We'd be more than happy to help.
-          <br>
-          Email: w.indebate2019@gmail.com
-        </p>
+            contact
+            <hr style="height: 3px; width: 25%; background-color: #3c3059">
+            <hr style="height: 2px; width: 15%; background-color: #84b7b1">
+          </div>
+          <p>
+            Don't hesitate to reach out with any questions, comments, or concerns! We'd be more than happy to help.
+            <br>
+            Email: w.indebate2019@gmail.com
+          </p>
+
+          <div class="col-xs-12">
+            <app-alerts [alerts]="alerts"></app-alerts>
+          </div>
+        
 
         <form name="contactForm" class="form" #contactForm>
             <div class="form-group">
@@ -35,7 +40,8 @@
             </div> -->
         
             <div class="form-group mb-2">
-              <button type="submit" class="btn btn-secondary btn-block" [disabled]="!contactForm.valid " >
+                <!-- [disabled]="!contactForm.valid" -->
+              <button type="submit" class="btn btn-secondary btn-block" (click)="sendContactMessage()">
                 <span *ngIf="!isLoading; else loading">
                   Send message
                 </span>
